--- a/webapp/src/main/webapp/WEB-INF/persistor.properties
+++ b/webapp/src/main/webapp/WEB-INF/persistor.properties
@@ -37,10 +37,10 @@ isis.persistor.disableConcurrencyChecking=false
 #
 # HSQLDB in-memory
 #
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.hsqldb.jdbcDriver
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:hsqldb:mem:test
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=sa
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.hsqldb.jdbcDriver
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:hsqldb:mem:test
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=sa
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=
 
 #
 # HSQLDB in-memory (using log4jdbc-remix)
@@ -81,10 +81,11 @@ isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=
 #
 # MySQL Server 
 #
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:postgresql://localhost:5432/isis
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=isis
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=isis
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://localhost:8889/isis
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=root
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=root
+
 
 
 #
