Profiel MKB erbij

--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -156,9 +156,9 @@ isis.reflector.facet-decorators=org.apache.isis.core.progmodel.facetdecorators.i
 #
 
 
-#isis.services.prefix = 
+#isis.services.prefix =
+# 10:dom.simple.SimpleObjects,\ eruit gehaald (yodo)
 isis.services = \
-                10:dom.simple.SimpleObjects,\
                 10:nl.xtalus.dom.user.Users,\
                 10:nl.xtalus.dom.profile.Profiles,\
                 \
