--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -246,9 +246,10 @@
         <init-param>
             <param-name>authenticationSessionStrategy</param-name>
             <param-value>org.apache.isis.viewer.restfulobjects.server.authentication.AuthenticationSessionStrategyBasicAuth</param-value>
+            <!-- <param-value>org.apache.isis.viewer.restfulobjects.server.authentication.AuthenticationSessionStrategyTrusted</param-value> -->
         </init-param>
         <init-param>
-            <!-- what to do if no session was found; we indicate to issue a 401 basic authentication challenge -->
+            what to do if no session was found; we indicate to issue a 401 basic authentication challenge
             <param-name>whenNoSession</param-name>
             <param-value>basicAuthChallenge</param-value>
         </init-param>
