matching Party, Person and Persons added; tests for Person

--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -155,7 +155,8 @@ isis.reflector.facet-decorators=org.apache.isis.core.metamodel.facetdecorator.i1
 # end-user gains access to other domain objects by invoking the actions of the domain services.
 #
 isis.services-installer=configuration-and-annotation
-isis.services.ServicesInstallerFromAnnotation.packagePrefix=nl.yodo,\
+isis.services.ServicesInstallerFromAnnotation.packagePrefix=info.matchingservice, \
+															nl.yodo,\
 															nl.socrates,\
                                                             nl.socrates.app.webapp.prototyping,\
                                                             org.isisaddons.module.security
@@ -201,8 +202,10 @@ isis.services = \
 #
 #isis.fixtures.prefix= nl.socrates.fixture
 #isis.fixtures= SocratesDemoFixture
-isis.fixtures.prefix= nl.yodo.fixture
-isis.fixtures= YodoDemoFixture
+#isis.fixtures.prefix= nl.yodo.fixture
+#isis.fixtures= YodoDemoFixture
+isis.fixtures.prefix= info.matchingservice.fixture
+isis.fixtures= MatchingDemoFixture
 
 
 #
