--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -45,6 +45,10 @@ securityManager.realms = $iniRealm
 # user = password, role1, role2, role3, ...
 
 sven = pass, admin_role
+frans = pass, matching-user
+rembrandt = pass, matching-user
+gerard = pass, matching-user
+michiel = pass, matching-user
 test1 = pass, socrates-user
 test2 = pass, socrates-user
 test3 = pass, socrates-user
@@ -76,3 +80,4 @@ self-install_role = *:ToDoItemsFixturesService:install:*
 admin_role = *
 socrates-user = nl.yodo.dom.Party:*:*:*,\
 				nl.yodo.dom.pruts:*:*:*
+matching-user = info.matchingservice.dom.Party:*:*:*				
