starting adding profile

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -80,4 +80,5 @@ self-install_role = *:ToDoItemsFixturesService:install:*
 admin_role = *
 socrates-user = nl.yodo.dom.Party:*:*:*,\
 				nl.yodo.dom.pruts:*:*:*
-matching-user = info.matchingservice.dom.Party:*:*:*
+matching-user = info.matchingservice.dom.Party:*:*:*,\
+				info.matchingservice.dom.Profile:*:*:*
