adding profiles continued...

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -49,6 +49,7 @@ frans = pass, matching-user
 rembrandt = pass, matching-user
 gerard = pass, matching-user
 michiel = pass, matching-user
+antoni = pass, matching-user
 test1 = pass, socrates-user
 test2 = pass, socrates-user
 test3 = pass, socrates-user
