adding Need and Vacancy

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -82,4 +82,5 @@ admin_role = *
 socrates-user = nl.yodo.dom.Party:*:*:*,\
 				nl.yodo.dom.pruts:*:*:*
 matching-user = info.matchingservice.dom.Party:*:*:*,\
-				info.matchingservice.dom.Profile:*:*:*
+				info.matchingservice.dom.Profile:*:*:*,\
+				info.matchingservice.dom.Need:*:*:*
