--- a/webapp/src/main/webapp/WEB-INF/persistor.properties
+++ b/webapp/src/main/webapp/WEB-INF/persistor.properties
@@ -44,6 +44,14 @@ isis.persistor.disableConcurrencyChecking=false
 # MySQL Server 
 #
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://mysql.gedge.nl
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=xtalus
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=PqOCvcdqK1P4IprHPWXC
+
+#
+# MySQL Server 
+#
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://eu-cdbr-cb-west-01.cleardb.net:3306/cb_socrates
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=b77a6b1f16a27c
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=d2b45708
