fixtures for Need, Vacancy en VacancyProfile added

--- a/webapp/src/main/webapp/WEB-INF/persistor.properties
+++ b/webapp/src/main/webapp/WEB-INF/persistor.properties
@@ -36,7 +36,7 @@ isis.persistor.disableConcurrencyChecking=false
 # MySQL Server 
 #
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://localhost:8889/isis
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://localhost:8889/matching
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=root
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=root
 
@@ -44,7 +44,7 @@ isis.persistor.disableConcurrencyChecking=false
 # MySQL Server 
 #
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://mysql.gedge.nl
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://mysql.gedge.nl/xtalus
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=xtalus
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=PqOCvcdqK1P4IprHPWXC
 
