Match object added; VacancyProfileElements Hidden; Added TestInteger on Profile and Vacancy

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -50,6 +50,7 @@ rembrandt = pass, matching-user
 gerard = pass, matching-user
 michiel = pass, matching-user
 antoni = pass, matching-user
+jeanne = pass, matching-user
 test1 = pass, socrates-user
 test2 = pass, socrates-user
 test3 = pass, socrates-user
@@ -83,4 +84,5 @@ socrates-user = nl.yodo.dom.Party:*:*:*,\
 				nl.yodo.dom.pruts:*:*:*
 matching-user = info.matchingservice.dom.Party:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
+				info.matchingservice.dom.Match:*:*:*,\
 				info.matchingservice.dom.Need:*:*:*
