Thrown away nl.socrates tests; prototype menu made

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -85,4 +85,5 @@ socrates-user = nl.yodo.dom.Party:*:*:*,\
 matching-user = info.matchingservice.dom.Party:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
 				info.matchingservice.dom.Match:*:*:*,\
-				info.matchingservice.dom.Need:*:*:*
+				info.matchingservice.dom.Need:*:*:*,\
+				info.matchingservice.fixture:*:*:*
