--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -82,7 +82,7 @@ self-install_role = *:ToDoItemsFixturesService:install:*
 admin_role = *
 socrates-user = nl.yodo.dom.Party:*:*:*,\
 				nl.yodo.dom.pruts:*:*:*
-matching-user = info.matchingservice.dom.Party:*:*:*,\
+matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
 				info.matchingservice.dom.Match:*:*:*,\
 				info.matchingservice.dom.Need:*:*:*,\
