--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -86,4 +86,6 @@ matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
 				info.matchingservice.dom.Match:*:*:*,\
 				info.matchingservice.dom.Need:*:*:*,\
+				info.matchingservice.dom.Assessment:*:*:*,\
 				info.matchingservice.fixture:*:*:*
+				
