Adding drop down profile elements

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -87,5 +87,6 @@ matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Match:*:*:*,\
 				info.matchingservice.dom.Need:*:*:*,\
 				info.matchingservice.dom.Assessment:*:*:*,\
+				info.matchingservice.dom.Dropdown:*:*:*,\
 				info.matchingservice.fixture:*:*:*
 				
