Refactor complete; no matching, fixtures and tests yet

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -83,10 +83,13 @@ admin_role = *
 socrates-user = nl.yodo.dom.Party:*:*:*,\
 				nl.yodo.dom.pruts:*:*:*
 matching-user = info.matchingservice.dom.Actor:*:*:*,\
-				info.matchingservice.dom.Profile:*:*:*,\
-				info.matchingservice.dom.Match:*:*:*,\
-				info.matchingservice.dom.Need:*:*:*,\
 				info.matchingservice.dom.Assessment:*:*:*,\
-				info.matchingservice.dom.Dropdown:*:*:*,\
+				info.matchingservice.dom.Demand:*:*:*,\
+				info.matchingservice.dom.Dropdown:*:*:*,\			
+				info.matchingservice.dom.Match:*:*:*,\
+				info.matchingservice.dom.Profile:*:*:*,\
+				info.matchingservice.dom.Supply:*:*:*,\
 				info.matchingservice.fixture:*:*:*
+				
+				
 				
