Demand and Supply types added

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -84,11 +84,10 @@ socrates-user = nl.yodo.dom.Party:*:*:*,\
 				nl.yodo.dom.pruts:*:*:*
 matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Assessment:*:*:*,\
-				info.matchingservice.dom.Demand:*:*:*,\
+				info.matchingservice.dom.DemandSupply:*:*:*,\
 				info.matchingservice.dom.Dropdown:*:*:*,\			
 				info.matchingservice.dom.Match:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
-				info.matchingservice.dom.Supply:*:*:*,\
 				info.matchingservice.fixture:*:*:*
 				
 				
