--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -156,9 +156,7 @@ isis.reflector.facet-decorators=org.apache.isis.core.metamodel.facetdecorator.i1
 #
 isis.services-installer=configuration-and-annotation
 isis.services.ServicesInstallerFromAnnotation.packagePrefix=info.matchingservice, \
-															nl.yodo,\
-															nl.socrates,\
-                                                            nl.socrates.app.webapp.prototyping,\
+                                                            nl.matching.app.webapp.prototyping,\
                                                             org.isisaddons.module.security
 
 #isis.services.prefix = 
