--- a/webapp/src/main/webapp/WEB-INF/viewer_restfulobjects.properties
+++ b/webapp/src/main/webapp/WEB-INF/viewer_restfulobjects.properties
@@ -24,7 +24,8 @@ isis.viewer.restfulobjects.RestfulObjectsSpecEventSerializer.baseUrl=http://loca
 isis.viewer.restfulobjects.suppressDescribedByLinks=true
 isis.viewer.restfulobjects.suppressUpdateLink=true
 isis.viewer.restfulobjects.suppressMemberId=true
-isis.viewer.restfulobjects.suppressMemberLinks=true
+#Deze onderstaande is nodig om links naar akties op bijvoorbeeld allDemands te tonen
+isis.viewer.restfulobjects.suppressMemberLinks=false
 isis.viewer.restfulobjects.suppressMemberExtensions=true
 isis.viewer.restfulobjects.suppressMemberDisabledReason=true
 isis.viewer.restfulobjects.objectPropertyValuesOnly=false
