--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -62,6 +62,7 @@ joe  = pass, socrates-user, user_role, self-install_role
 guest = guest, user_role
 exploration = pass, admin_role
 admin = pass, socrates-admin
+competence = pass, competence-user
 
 
 
@@ -89,6 +90,6 @@ matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Match:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
 				info.matchingservice.fixture:*:*:*
-				
+competence-user = info.matchingservice.dom.Competence:*:*:*				
 				
 				
