--- a/dom/pom.xml
+++ b/dom/pom.xml
@@ -20,12 +20,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-    	<groupId>nl.yodo</groupId>
-    	<artifactId>yodo_matching_app</artifactId>
+    	<groupId>info.matchingservice</groupId>
+    	<artifactId>matchingservice</artifactId>
         <version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yodo_matching_app-dom</artifactId>
+	<artifactId>matchingservice-dom</artifactId>
 	<name>Matching App DOM</name>
 
 	<build>
