--- a/fixture/pom.xml
+++ b/fixture/pom.xml
@@ -20,18 +20,18 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
-    	<groupId>nl.yodo</groupId>
-        <artifactId>yodo_matching_app</artifactId>
+    	<groupId>info.matchingservice</groupId>
+        <artifactId>matchingservice</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-	<artifactId>yodo_matching_app-fixture</artifactId>
+	<artifactId>matchingservice-fixture</artifactId>
 	<name>Matching App Fixtures</name>
 
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>yodo_matching_app-dom</artifactId>
+			<artifactId>matchingservice-dom</artifactId>
 		</dependency>
 	</dependencies>
 
