--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -20,12 +20,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>nl.yodo</groupId>
-        <artifactId>yodo_matching_app</artifactId>
+        <groupId>info.matchingservice</groupId>
+        <artifactId>matchingservice</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>yodo_matching_app-webapp</artifactId>
+    <artifactId>matchingservice-webapp</artifactId>
     <name>Matching App Webapp</name>
 
     <description>This module runs both the Wicket viewer and the Restfulobjects viewer in a single webapp configured to run using the datanucleus object store.</description>
@@ -144,7 +144,7 @@
         <!-- other modules in this project -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>yodo_matching_app-dom</artifactId>
+            <artifactId>matchingservice-dom</artifactId>
             <exclusions>
                 <exclusion>
                     <!-- so don't pick up transitive dependency to asm 4.0.0 -->
@@ -155,7 +155,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>yodo_matching_app-fixture</artifactId>
+            <artifactId>matchingservice-fixture</artifactId>
             <exclusions>
                 <exclusion>
                     <!-- so don't pick up transitive dependency to asm 4.0.0 -->
