prepare for sprint 1- 4

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -89,6 +89,7 @@ matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Dropdown:*:*:*,\			
 				info.matchingservice.dom.Match:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
+				info.matchingservice.dom.Competence:*:*:*,\
 				info.matchingservice.fixture:*:*:*
 competence-user = info.matchingservice.dom.Competence:*:*:*				
 				
