--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -90,6 +90,7 @@ matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Match:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
 				info.matchingservice.dom.Competence:*:*:*,\
+				info.matchingservice.dom.Tags:*:*:*,\
 				info.matchingservice.fixture:*:*:*
 competence-user = info.matchingservice.dom.Competence:*:*:*				
 				
