Sprint 1 - demands: added summary, story, attach

--- a/webapp/src/main/webapp/WEB-INF/viewer_restfulobjects.properties
+++ b/webapp/src/main/webapp/WEB-INF/viewer_restfulobjects.properties
@@ -35,3 +35,5 @@ isis.viewer.restfulobjects.suppressMemberExtensions=true
 isis.viewer.restfulobjects.suppressMemberDisabledReason=true
 #
 isis.viewer.restfulobjects.objectPropertyValuesOnly=false
+#
+isis.viewer.restfulobjects.honorUiHints=false
