--- a/webapp/src/main/webapp/WEB-INF/persistor.properties
+++ b/webapp/src/main/webapp/WEB-INF/persistor.properties
@@ -43,10 +43,10 @@ isis.persistor.disableConcurrencyChecking=false
 #
 # MySQL Server 
 #
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://mysql.gedge.nl/xtalus
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=xtalus
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=PqOCvcdqK1P4IprHPWXC
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://mysql.gedge.nl/xtalus
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=xtalus
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=PqOCvcdqK1P4IprHPWXC
 
 #
 # MySQL Server 
@@ -61,10 +61,10 @@ isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=PqOCvcdqK1P4
 #
 # HSQLDB in-memory
 #
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.hsqldb.jdbcDriver
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:hsqldb:mem:test
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=sa
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.hsqldb.jdbcDriver
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:hsqldb:mem:test
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=sa
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=
 
 #
 # HSQLDB in-memory (using log4jdbc-remix)
