--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -134,7 +134,7 @@
     	<dependency>
         	<groupId>org.isisaddons.module.security</groupId>
         	<artifactId>isis-module-security-dom</artifactId>
-        	<version>1.7.0</version>
+        	<version>1.8.0-SNAPSHOT</version>
    		</dependency>
    		<dependency>
         	<groupId>org.mindrot</groupId>
