Sprint 1 - refacture matching algoritms

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -91,6 +91,7 @@ matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Profile:*:*:*,\
 				info.matchingservice.dom.Competence:*:*:*,\
 				info.matchingservice.dom.Tags:*:*:*,\
+				info.matchingservice.dom.Rules:*:*:*,\
 				info.matchingservice.dom.Api:*:*:*,\
 				info.matchingservice.fixture:*:*:*
 competence-user = info.matchingservice.dom.Competence:*:*:*				
