--- a/webapp/src/main/webapp/WEB-INF/persistor.properties
+++ b/webapp/src/main/webapp/WEB-INF/persistor.properties
@@ -56,7 +56,10 @@ isis.persistor.disableConcurrencyChecking=false
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=b77a6b1f16a27c
 #isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=d2b45708
 
-
+#
+# TEST WITH ELASTIC SEARCH
+#
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=json:"http://localhost:9200/"
 
 #
 # HSQLDB in-memory
