Test Email enzo

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -93,6 +93,7 @@ matching-user = info.matchingservice.dom.Actor:*:*:*,\
 				info.matchingservice.dom.Tags:*:*:*,\
 				info.matchingservice.dom.Rules:*:*:*,\
 				info.matchingservice.dom.Api:*:*:*,\
+				info.matchingservice.dom.CommunicationChannels:*:*:*,\
 				info.matchingservice.fixture:*:*:*
 competence-user = info.matchingservice.dom.Competence:*:*:*				
 				
