--- a/dom/pom.xml
+++ b/dom/pom.xml
@@ -129,6 +129,18 @@
             <artifactId>objenesis</artifactId>
             <scope>test</scope>
         </dependency>
+        
+       <!--   for postcode Nu service -->
+        <dependency>
+   			<groupId>org.glassfish.jersey.core</groupId>
+    		<artifactId>jersey-client</artifactId>
+   			<version>2.17</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+		</dependency>	
 
 	</dependencies>
 </project>
