adding API action deletePersonOwnedBy for testing purposes; adding test1 - test9 testaccounts

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -51,11 +51,15 @@ gerard = pass, matching-user
 michiel = pass, matching-user
 antoni = pass, matching-user
 jeanne = pass, matching-user
-test1 = pass, socrates-user
-test2 = pass, socrates-user
-test3 = pass, socrates-user
-test4 = pass, socrates-user
-test5 = pass, socrates-user
+test1 = pass, matching-user
+test2 = pass, matching-user
+test3 = pass, matching-user
+test4 = pass, matching-user
+test5 = pass, matching-user
+test6 = pass, matching-user
+test7 = pass, matching-user
+test8 = pass, matching-user
+test9 = pass, matching-user
 dick = pass, user_role, self-install_role
 bob  = pass, user_role, self-install_role
 joe  = pass, socrates-user, user_role, self-install_role
