implementing user-registration-service

--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -207,6 +207,13 @@ isis.fixtures= MatchingDemoFixture
 
 
 #
+# required by EmailServiceDefault
+#
+isis.service.email.sender.address=yodoipc@gmail.com
+isis.service.email.sender.password=D00rn3nb4l
+
+
+#
 # whether ExceptionRecognizers should also log any recognized exceptions
 # (default false; enable for diagnostics/debugging)
 #
