--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -21,16 +21,16 @@
 
 #	YODO: REMOVE COMMENTS WHEN USING SECURITY ADD_ON
 
-# isisModuleSecurityRealm=org.isisaddons.module.security.shiro.IsisModuleSecurityRealm
-# authenticationStrategy=org.isisaddons.module.security.shiro.AuthenticationStrategyForIsisModuleSecurityRealm
-# securityManager.authenticator.authenticationStrategy = $authenticationStrategy
-# isisModuleSecurityRealm.delegateAuthenticationRealm=$iniRealm
-# securityManager.realms = $isisModuleSecurityRealm
+ isisModuleSecurityRealm=org.isisaddons.module.security.shiro.IsisModuleSecurityRealm
+ authenticationStrategy=org.isisaddons.module.security.shiro.AuthenticationStrategyForIsisModuleSecurityRealm
+ securityManager.authenticator.authenticationStrategy = $authenticationStrategy
+ isisModuleSecurityRealm.delegateAuthenticationRealm=$iniRealm
+ securityManager.realms = $isisModuleSecurityRealm
 
 
 # to use .ini file
 #	YODO: COMMENT FOLLOWING OUT WHEN USING SECURIY ADD_ON
-securityManager.realms = $iniRealm
+;securityManager.realms = $iniRealm
 
 
 
