--- a/integtests/pom.xml
+++ b/integtests/pom.xml
@@ -81,6 +81,13 @@
             <artifactId>hsqldb</artifactId>
         </dependency>
 
+        <!--  For security module add-on -->
+        <dependency>
+            <groupId>org.isisaddons.module.security</groupId>
+            <artifactId>isis-module-security-dom</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+
         <!-- 
         uncomment to enable enhanced cucumber-jvm reporting
         http://www.masterthought.net/section/cucumber-reporting
