--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -276,6 +276,12 @@
             <artifactId>hsqldb</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
         <!-- 
         <dependency>
             <groupId>postgresql</groupId>
