--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -258,7 +258,7 @@
     <!-- used by RestEasy to determine the JAX-RS resources and other related configuration -->
     <context-param>
         <param-name>javax.ws.rs.Application</param-name>
-        <param-value>info.matchingservice.dom.Custom_Rest.CustomRestfulObjectsApplication</param-value>
+        <param-value>info.matchingservice.webapp.custom_rest.CustomRestfulObjectsApplication</param-value>
     </context-param>
     
     <context-param>
@@ -274,8 +274,9 @@
         <!-- authentication required for REST -->
         <init-param>
             <param-name>authenticationSessionStrategy</param-name>
-            <param-value>org.apache.isis.viewer.restfulobjects.server.authentication.AuthenticationSessionStrategyBasicAuth</param-value>
-            <!-- <param-value>org.apache.isis.viewer.restfulobjects.server.authentication.AuthenticationSessionStrategyTrusted</param-value> -->
+            <!--<param-value>org.apache.isis.viewer.restfulobjects.server.authentication.AuthenticationSessionStrategyBasicAuth</param-value>-->
+            <param-value>info.matchingservice.webapp.custom_rest.CustomAuthenticationSessionStrategyBasicAuth</param-value>
+             <!--<param-value>org.apache.isis.viewer.restfulobjects.server.authentication.AuthenticationSessionStrategyTrusted</param-value> -->
         </init-param>
         <init-param>
             <!-- what to do if no session was found; we indicate to issue a 401 basic authentication challenge -->
