--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -209,8 +209,8 @@ isis.fixtures= MatchingDemoFixture
 #
 # required by EmailServiceDefault
 #
-isis.service.email.sender.address=yodoipc@gmail.com
-isis.service.email.sender.password=D00rn3nb4l
+isis.service.email.sender.address=xtalusmatchingapp@gmail.com
+isis.service.email.sender.password=xtalus_matching4pp
 
 
 #
