--- a/dom/pom.xml
+++ b/dom/pom.xml
@@ -147,7 +147,14 @@
 		<dependency>
     		<groupId>com.google.code.gson</groupId>
     		<artifactId>gson</artifactId>
-		</dependency>	
+		</dependency>
+
+        <!-- for oauth2 -->
+        <dependency>
+            <groupId>org.apache.oltu.oauth2</groupId>
+            <artifactId>org.apache.oltu.oauth2.client</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
 	</dependencies>
 </project>
