Try if isis.properties will be ignored

--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -245,3 +245,8 @@ isis.service.email.sender.password=xtalus_matching4pp
 #isis.viewers.paged.standalone=30
 #isis.viewers.paged.parented=10
 
+LinkedInClientId=
+LinkedInRedirectUri=http://localhost:8080/restful/register/oauth/
+LinkedInState=
+LinkedInClientSecret=
+
