--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -245,7 +245,7 @@ isis.service.email.sender.password=xtalus_matching4pp
 #isis.viewers.paged.standalone=30
 #isis.viewers.paged.parented=10
 
-LinkedInClientId=test123
+LinkedInClientId=
 LinkedInRedirectUri=http://localhost:8080/restful/register/oauth/
 LinkedInState=
 LinkedInClientSecret=
