Adding Hourly_Rate to profile elements

--- a/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -24,7 +24,7 @@
  isisModuleSecurityRealm=org.isisaddons.module.security.shiro.IsisModuleSecurityRealm
  authenticationStrategy=org.isisaddons.module.security.shiro.AuthenticationStrategyForIsisModuleSecurityRealm
  securityManager.authenticator.authenticationStrategy = $authenticationStrategy
- isisModuleSecurityRealm.delegateAuthenticationRealm=$iniRealm
+; isisModuleSecurityRealm.delegateAuthenticationRealm=$iniRealm
  securityManager.realms = $isisModuleSecurityRealm
 
 
