XtalusAdmin can change roles

--- a/webapp/src/main/webapp/WEB-INF/persistor.properties
+++ b/webapp/src/main/webapp/WEB-INF/persistor.properties
@@ -44,10 +44,10 @@ isis.persistor.disableConcurrencyChecking=false
 # MySQL Server
 # TODO when deploying: Do not forget: isis.properties linkedin en fb details and webapp-customAuthenticationSessionStrategy...
 #
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://mysql.xtalus.gedge.nl/xtalus_acc
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=xtalus_acc
-#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=PqOCvcdqK1P4IprHPWXC
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=com.mysql.jdbc.Driver
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:mysql://mysql.xtalus.gedge.nl/xtalus_acc
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=xtalus_acc
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=PqOCvcdqK1P4IprHPWXC
 
 #
 # MySQL Server 
@@ -65,10 +65,10 @@ isis.persistor.disableConcurrencyChecking=false
 #
 # HSQLDB in-memory
 #
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.hsqldb.jdbcDriver
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:hsqldb:mem:test
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=sa
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.hsqldb.jdbcDriver
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:hsqldb:mem:test
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=sa
+#isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=
 
 #
 # HSQLDB in-memory (using log4jdbc-remix)
