--- a/dom/pom.xml
+++ b/dom/pom.xml
@@ -156,5 +156,11 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
 	</dependencies>
 </project>
