--- a/pom.xml
+++ b/pom.xml
@@ -30,33 +30,31 @@
         <maven>3.0.4</maven>
     </prerequisites>
 
-	<properties>
-        <isis.version>1.8.0</isis.version>
+    <properties>
+        <isis.version>1.9.0</isis.version>
 
-        <!-- must be consistent with the versions defined by the JDO Objectstore -->
-        <datanucleus-accessplatform-jdo-rdbms.version>3.3.6</datanucleus-accessplatform-jdo-rdbms.version>
-        <datanucleus-maven-plugin.version>3.3.2</datanucleus-maven-plugin.version>
+        <isis-module-security.version>1.9.0</isis-module-security.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-	</properties>
-    
+        <assertj-core.version>2.0.0</assertj-core.version>
+    </properties>
+
     <repositories>
- 		<repository>
-             <id>apache.snapshots</id>
-             <name>Apache Snapshots</name>
-             <url>https://repository.apache.org/content/repositories/snapshots/</url>
-             <releases>
-                 <enabled>false</enabled>
-             </releases>
-             <snapshots>
-             </snapshots>
-         </repository>
-		<repository>
+        <repository>
+            <id>apache.snapshots</id>
+            <name>Apache Snapshots</name>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+            </snapshots>
+        </repository>
+        <repository>
             <id>Cloudbees snapshots</id>
             <url>http://repository-estatio.forge.cloudbees.com/snapshot/</url>
             <snapshots>
-                <enabled>false</enabled>
             </snapshots>
             <releases>
                 <enabled>false</enabled>
@@ -69,11 +67,43 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>1.3.1</version>
+                    <configuration>
+                        <rules>
+                            <requireMavenVersion>
+                                <version>[3.2.1,)</version>
+                            </requireMavenVersion>
+                            <requireJavaVersion>
+                                <version>[1.8.0,)</version>
+                            </requireJavaVersion>
+                            <requirePluginVersions>
+                                <message>All plugin versions must be
+                                    defined!</message>
+                                <banLatest>true</banLatest>
+                                <banRelease>true</banRelease>
+                            </requirePluginVersions>
+                            <DependencyConvergence/>
+                        </rules>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>validate-enforce</id>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.1</version>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <compilerArgument>-parameters</compilerArgument>
                     </configuration>
                     <executions>
                         <execution>
@@ -94,6 +124,7 @@
                     <configuration>
                         <includes>
                             <include>**/*Test.java</include>
+                            <include>**/*Test$*.java</include>
                             <include>**/*Test_*.java</include>
                             <include>**/*Spec*.java</include>
                         </includes>
@@ -104,7 +135,7 @@
                         </excludes>
                         <useFile>true</useFile>
                         <printSummary>true</printSummary>
-                        <outputDirectory>${project.build.directory}/surefire-reports</outputDirectory>
+                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     </configuration>
                 </plugin>
 
@@ -113,16 +144,6 @@
                     <artifactId>maven-surefire-report-plugin</artifactId>
                     <version>2.16</version>
                     <configuration>
-                        <includes>
-                            <include>**/*Test.java</include>
-                            <include>**/*Test_*.java</include>
-                            <include>**/*Spec*.java</include>
-                        </includes>
-                        <excludes>
-                            <exclude>**/Test*.java</exclude>
-                            <exclude>**/*ForTesting.java</exclude>
-                            <exclude>**/*Abstract*.java</exclude>
-                        </excludes>
                         <showSuccess>false</showSuccess>
                     </configuration>
                     <executions>
@@ -162,9 +183,9 @@
                 </plugin>
 
                 <plugin>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>maven-jetty-plugin</artifactId>
-                    <version>6.1.26</version>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>9.3.2.v20150730</version>
                 </plugin>
 
                 <plugin>
@@ -189,8 +210,7 @@
                 <plugin>
                     <groupId>org.simplericity.jettyconsole</groupId>
                     <artifactId>jetty-console-maven-plugin</artifactId>
-                    <!-- update to 1.54 reversed,since seems compiled against 1.7 (major.minor version 51.0) -->
-                    <version>1.43</version>
+                    <version>1.56</version>
                 </plugin>
 
                 <!-- Apache Release Audit Tool -->
@@ -209,6 +229,8 @@
                             <exclude>**/.classpath</exclude>
                             <exclude>**/.settings/**</exclude>
                             <exclude>**/*.launch</exclude>
+                            <exclude>**/ide/eclipse/launch/**</exclude>
+                            <exclude>**/ide/intellij/launch/**</exclude>
                             <exclude>src/site/resources/ide/eclipse/**</exclude>
 
                             <exclude>**/rebel.xml</exclude>
@@ -219,71 +241,74 @@
                             <exclude>**/*.json</exclude>
                             <exclude>**/*.min.js</exclude>
                             <exclude>**/*.js</exclude>
+
+                            <exclude>**/translations.pot</exclude>
+                            <exclude>**/translations*.po</exclude>
                         </excludes>
                         <licenses>
-                          <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
-                            <licenseFamilyCategory>AL2</licenseFamilyCategory>
-                            <licenseFamilyName>Apache License 2.0</licenseFamilyName>
-                            <notes/>
-                            <patterns>
-                              <pattern>Licensed to the Apache Software Foundation (ASF) under one</pattern>
-                            </patterns>
-                          </license>
-                          <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
-                            <licenseFamilyCategory>JQRY</licenseFamilyCategory>
-                            <licenseFamilyName>MIT</licenseFamilyName>
-                            <notes/>
-                            <patterns>
-                              <pattern>Dual licensed under the MIT or GPL Version 2 licenses.</pattern>
-                            </patterns>
-                          </license>
-                          <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
-                            <licenseFamilyCategory>JMOCK</licenseFamilyCategory>
-                            <licenseFamilyName>JMock</licenseFamilyName>
-                            <notes/>
-                            <patterns>
-                              <pattern>Copyright (c) 2000-2007, jMock.org</pattern>
-                            </patterns>
-                          </license>
-                          <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
-                            <licenseFamilyCategory>DOCBK</licenseFamilyCategory>
-                            <licenseFamilyName>DocBook 4.5</licenseFamilyName>
-                            <notes/>
-                            <patterns>
-                              <pattern>Permission to copy in any form is granted for use</pattern>
-                              <pattern>Permission to use, copy, modify and distribute the DocBook DTD</pattern>
-                              <pattern>is hereby granted in perpetuity, provided that the above copyright</pattern>
-                              <pattern>This is the catalog data file for DocBook XML V4.5. It is provided as</pattern>
-                              <pattern>XML Catalog data for DocBook XML V4.5</pattern>
-                              <pattern>DocBook additional general entities V4.5</pattern>
-                              <pattern>XML EXCHANGE TABLE MODEL DECLARATION MODULE</pattern>
-                            </patterns>
-                          </license>
-                          <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
-                            <licenseFamilyCategory>W3C</licenseFamilyCategory>
-                            <licenseFamilyName>XHTML</licenseFamilyName>
-                            <notes/>
-                            <patterns>
-                              <pattern>Copyright (c) 1998-2002 W3C (MIT, INRIA, Keio),</pattern>
-                            </patterns>
-                          </license>
+                            <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
+                                <licenseFamilyCategory>AL2</licenseFamilyCategory>
+                                <licenseFamilyName>Apache License 2.0</licenseFamilyName>
+                                <notes/>
+                                <patterns>
+                                    <pattern>Licensed to the Apache Software Foundation (ASF) under one</pattern>
+                                </patterns>
+                            </license>
+                            <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
+                                <licenseFamilyCategory>JQRY</licenseFamilyCategory>
+                                <licenseFamilyName>MIT</licenseFamilyName>
+                                <notes/>
+                                <patterns>
+                                    <pattern>Dual licensed under the MIT or GPL Version 2 licenses.</pattern>
+                                </patterns>
+                            </license>
+                            <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
+                                <licenseFamilyCategory>JMOCK</licenseFamilyCategory>
+                                <licenseFamilyName>JMock</licenseFamilyName>
+                                <notes/>
+                                <patterns>
+                                    <pattern>Copyright (c) 2000-2007, jMock.org</pattern>
+                                </patterns>
+                            </license>
+                            <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
+                                <licenseFamilyCategory>DOCBK</licenseFamilyCategory>
+                                <licenseFamilyName>DocBook 4.5</licenseFamilyName>
+                                <notes/>
+                                <patterns>
+                                    <pattern>Permission to copy in any form is granted for use</pattern>
+                                    <pattern>Permission to use, copy, modify and distribute the DocBook DTD</pattern>
+                                    <pattern>is hereby granted in perpetuity, provided that the above copyright</pattern>
+                                    <pattern>This is the catalog data file for DocBook XML V4.5. It is provided as</pattern>
+                                    <pattern>XML Catalog data for DocBook XML V4.5</pattern>
+                                    <pattern>DocBook additional general entities V4.5</pattern>
+                                    <pattern>XML EXCHANGE TABLE MODEL DECLARATION MODULE</pattern>
+                                </patterns>
+                            </license>
+                            <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
+                                <licenseFamilyCategory>W3C</licenseFamilyCategory>
+                                <licenseFamilyName>XHTML</licenseFamilyName>
+                                <notes/>
+                                <patterns>
+                                    <pattern>Copyright (c) 1998-2002 W3C (MIT, INRIA, Keio),</pattern>
+                                </patterns>
+                            </license>
                         </licenses>
                         <licenseFamilies>
-                          <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
-                            <familyName>Apache License 2.0</familyName>
-                          </licenseFamily>
-                          <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
-                            <familyName>MIT</familyName>
-                          </licenseFamily>
-                          <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
-                            <familyName>JMock</familyName>
-                          </licenseFamily>
-                          <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
-                            <familyName>DocBook 4.5</familyName>
-                          </licenseFamily>
-                          <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
-                            <familyName>XHTML</familyName>
-                          </licenseFamily>
+                            <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
+                                <familyName>Apache License 2.0</familyName>
+                            </licenseFamily>
+                            <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
+                                <familyName>MIT</familyName>
+                            </licenseFamily>
+                            <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
+                                <familyName>JMock</familyName>
+                            </licenseFamily>
+                            <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
+                                <familyName>DocBook 4.5</familyName>
+                            </licenseFamily>
+                            <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
+                                <familyName>XHTML</familyName>
+                            </licenseFamily>
                         </licenseFamilies>
                     </configuration>
                 </plugin>
@@ -300,17 +325,18 @@
             </plugin>
         </plugins>
     </build>
-	
+
+
     <dependencyManagement>
         <dependencies>
 
-			<dependency>
-				<groupId>org.apache.isis.core</groupId>
-				<artifactId>isis</artifactId>
-				<version>${isis.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
+            <dependency>
+                <groupId>org.apache.isis.core</groupId>
+                <artifactId>isis</artifactId>
+                <version>${isis.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.isis.viewer</groupId>
@@ -320,13 +346,20 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj-core.version}</version>
+            </dependency>
+
+
 
             <!-- this project's own modules -->
-            <dependency>
-                <groupId>net.ftlines.wicket-source</groupId>
-                <artifactId>wicket-source</artifactId>
-                <version>6.0.0.8</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>net.ftlines.wicket-source</groupId>-->
+                <!--<artifactId>wicket-source</artifactId>-->
+                <!--<version>6.0.0.8</version>-->
+            <!--</dependency>-->
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>matchingservice-dom</artifactId>
@@ -345,8 +378,9 @@
             <dependency>
         		<groupId>org.isisaddons.module.devutils</groupId>
         		<artifactId>isis-module-devutils-dom</artifactId>
-        	<version>1.7.0</version>
-    	</dependency>
+        	    <version>1.7.0</version>
+    	    </dependency>
+
         </dependencies>
     </dependencyManagement>
     
@@ -395,7 +429,9 @@
     <module>fixture</module>
     <module>integtests</module>
     <module>webapp</module>
+      <module>matching-app</module>
   </modules>
+
   <url>http://www.xtalus.nl</url>
   <organization>
   	<name>YIP&amp;C</name>
