--- a/integtests/pom.xml
+++ b/integtests/pom.xml
@@ -50,9 +50,18 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>matching-app</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <artifactId>matchingservice-app</artifactId>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>${project.groupId}</groupId>-->
+            <!--<artifactId>matchingservice-dom</artifactId>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>${project.groupId}</groupId>-->
+            <!--<artifactId>matchingservice-fixture</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.isis.core</groupId>
@@ -82,6 +91,12 @@
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
         </dependency>
 
         <!--  For security module add-on -->
