--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -144,8 +144,8 @@
         <!-- other modules in this project -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>matching-app</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <artifactId>matchingservice-app</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         
         <!-- other isis components -->
