--- a/pom.xml
+++ b/pom.xml
@@ -391,6 +391,14 @@
         	    <version>1.7.0</version>
     	    </dependency>
 
+            <dependency>
+                <groupId>org.isisaddons.module.publishmq</groupId>
+                <artifactId>isis-module-publishmq-dom</artifactId>
+                <version>1.9.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     
