--- a/pom.xml
+++ b/pom.xml
@@ -382,6 +382,16 @@
                 <artifactId>matchingservice-webapp</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>matchingservice-canonical</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>matchingservice-canonicalmappings</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
 
 
 
@@ -448,6 +458,8 @@
     <module>integtests</module>
     <module>webapp</module>
     <module>app</module>
+    <module>canonical</module>
+    <module>canonicalmappings</module>
   </modules>
 
   <url>http://www.xtalus.nl</url>
