--- a/dom/pom.xml
+++ b/dom/pom.xml
@@ -108,6 +108,11 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
 	</dependencies>
 
     <profiles>
