--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,13 @@
     </prerequisites>
 
     <properties>
-        <isis.version>1.10.0</isis.version>
+        <isis.version>1.11.0</isis.version>
 
-        <isis-module-security.version>1.10.0</isis-module-security.version>
+        <isis-module-security.version>1.11.0</isis-module-security.version>
         <orika-core.version>1.4.5</orika-core.version>
         <jbcrypt.version>0.3m</jbcrypt.version>
         <assertj-core.version>2.0.0</assertj-core.version>
-        <isis-metamodel-paraname8.version>1.10.0</isis-metamodel-paraname8.version>
+        <isis-metamodel-paraname8.version>1.11.0</isis-metamodel-paraname8.version>
         <quartz-scheduler.version>2.2.1</quartz-scheduler.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -347,6 +347,12 @@
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj-core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.6</version>
             </dependency>
 
             <!-- this project's own modules -->
